k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: titanic-api-service
  labels:
    app: titanic-api
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: titanic-api
