k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: titanic-api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: titanic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: titanic-api-service
                port:
                  number: 80
